--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -36,3 +32,78 @@
     transform: rotate(360deg);
   }
 }
+
+.App {
+  display: grid;
+  grid-template-rows: min-content auto;
+  grid-template-columns: 250px auto;
+  height: 100vh;
+  overflow: scroll;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: green;
+  color: white;
+  grid-column: 1 / span 2;
+  padding: 20px 5px;
+  font-family: sans-serif, "Courier New", monospace;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+form {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+form input,
+form textarea {
+  margin-bottom: 10px;
+  width: 300px;
+}
+
+nav,
+article {
+  height: 100%;
+  padding: 15px;
+}
+
+mainArticle {
+  height: 100%;
+  padding: 15px;
+  background: linear-gradient(to right, lightblue, rgb(110, 156, 110));
+}
+
+sideBar {
+  height: 100%;
+  padding: 15px;
+  background-color: lightpink;
+}
+
+nav {
+  background-color: #dee9ff;
+}
+
+nav p:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+article .date {
+  font-style: italic;
+}
+
+article .body {
+  white-space: break-spaces;
+}
+
+.error {
+  background-color: red;
+  color: gold;
+  padding: 5px;
+}
+
