--- a/src/App.css
+++ b/src/App.css
@@ -1,112 +1,122 @@
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .App {
-  display: grid;
-  grid-template-rows: min-content auto;
-  grid-template-columns: 250px auto;
-  height: 100vh;
-  overflow: scroll;
+    display: grid;
+    grid-template-rows: min-content auto;
+    grid-template-columns: 250px auto;
+    height: 100vh;
+    overflow: scroll;
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
-  background-color: green;
-  color: white;
-  grid-column: 1 / span 2;
-  padding: 20px 5px;
-  font-family: sans-serif, "Courier New", monospace;
-  font-weight: bold;
-  font-size: 35px;
+    display: flex;
+    justify-content: space-between;
+    background-color: green;
+    color: white;
+    grid-column: 1 / span 2;
+    padding: 20px 5px;
+    font-family: sans-serif, 'Courier New', monospace;
+    font-weight: bold;
+    font-size: 35px;
 }
 
 form {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 form input,
 form textarea {
-  margin-bottom: 10px;
-  width: 300px;
+    margin-bottom: 10px;
+    width: 300px;
 }
 
 nav,
 article {
-  height: 100%;
-  padding: 15px;
+    height: 100%;
+    padding: 15px;
 }
 
 mainArticle {
-  height: 100%;
-  /*padding: 15px;*/
-  background: linear-gradient(to right, lightblue, rgb(110, 156, 110));
+    height: 100%;
+    /*padding: 15px;*/
+    background: linear-gradient(to right, lightblue, rgb(110, 156, 110));
 }
 
 sideBar {
-  height: 100%;
-  padding: 15px;
-  background-color: lightpink;
+    height: 100%;
+    padding: 15px;
+    background-color: lightpink;
 }
 
 nav {
-  background-color: #dee9ff;
+    background-color: #dee9ff;
 }
 
 nav p:hover {
-  text-decoration: underline;
-  cursor: pointer;
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 article .date {
-  font-style: italic;
+    font-style: italic;
 }
 
 article .body {
-  white-space: break-spaces;
+    white-space: break-spaces;
 }
 
 .error {
-  background-color: red;
-  color: gold;
-  padding: 5px;
+    background-color: red;
+    color: gold;
+    padding: 5px;
 }
 
 .button {
-  padding: 15px;
+    padding: 15px;
+}
+
+.hit_button {
+    padding: 16px;
+    background-color: lightcoral;
+}
+
+.stand_button {
+    padding: 16px;
+    background-color: lightgreen;
 }
