--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,10 @@ article .body {
 
 background {
     background-image: url('https://pl.sterlingcdn.com/wp-content/uploads/sites/3/2018/07/blackjack-classic-background-1024x768.jpg');
+    background-color: green;
+    padding: 150px;
+    height: 150px;
+    width: 150px;
 }
 
 .playerHit {
