--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,10 @@ header {
     width: 99.35vw;
 }
 
+div::-webkit-scrollbar {
+    display: none;
+}
+
 form {
     padding: 10px;
     display: flex;
@@ -74,13 +78,13 @@ article {
 }
 
 mainArticle {
-    height: 100%;
+    height: 70%;
     /*padding: 15px;*/
     background: linear-gradient(to right, lightblue, rgb(110, 156, 110));
 }
 
 sideBar {
-    height: 100%;
+    height: 44.35vw;
     padding: 15px;
     background-color: lightpink;
 }
@@ -172,6 +176,10 @@ background {
     background-color:green;
     border-radius: 50%;
     transition: 0.3s;
+}
+.titleImg {
+    height: 46.3vw;
+    width: 83.73vw;
 }
 .playerStay {
     text-align: center;
